--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <title>Fabian</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="css/favicon.ico">
 </head>
+
 <body>
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <div class="top-container">
         <h1>I'm Fabian</h1>
         <p>an Embedded Software Engineer</p>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
+        <div class="profile">
+            <img src="images/profile-picture.png" alt="fabian-profile-img">
+            <h2>Hello.</h2>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="" src="images/microchip.png" alt="microchip-img">
+                <h3>Embedded Software Development</h3>
+                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
+                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row">
+                <img class="" src="images/backend.png" alt="">
+                <h3>Lorem Ipsum Dolor</h3>
+                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
+                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
-    <div class="bottom-container">    
+
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/in/fabianbarraez">LinkedIn</a>
+        <p>© Name Surname.</p>
     </div>
+
+
 </body>
+
 </html>
